weather-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-api
  name: weather-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
        - image: dfranciswoolies/ciarecruitment-bestapiever
          name: weather-api
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 6901
              name: vnc
              protocol: TCP
