weather-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: weather-api
